Changed color button to use icon, fixed alignment

--- a/src/components/styles/Paint.scss
+++ b/src/components/styles/Paint.scss
@@ -44,6 +44,7 @@ button {
 
 .side-btn {
     vertical-align: middle;
+    padding: 10px;
     width: 50px;
     height: 50px;
     background: white;
